--- a/Lingang.City.Brain/View/Industry/Building/Left_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Building/Left_First_01.html
@@ -1,5 +1,5 @@
 ﻿<!-- 企业top10列表 -->
-<div id="left01_01" class="divbox divbox-ll clearfix" style="z-index:999;display:block;">
+<div id="left01_01" class="divbox divbox-ll clearfix  industry-build-lf1" style="z-index:999;display:block;">
     <h3 class="hastabbox">
         <div>企业top10列表</div>
         <div class="charttabbox flex qytop10-tab">
