--- a/Lingang.City.Brain/View/Industry/Building/Left_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Building/Left_Second_01.html
@@ -1,5 +1,5 @@
 ﻿   <!-- 企业综合评分雷达图 -->
-<div id="left02_01" class="divbox divbox-lr clearfix" style="z-index:999;display:block;">
+<div id="left02_01" class="divbox divbox-lr clearfix industry-build-ls1" style="z-index:999;display:block;">
     <h3><div>企业综合评分雷达图</div></h3>
     <div class="divcont flex qyzhpfldt-cont">
         <div class="chartdiv qyzhpfldt-chartdiv" style="height: 4rem;">
