--- a/Lingang.City.Brain/View/Industry/Building/Left_Second_02.html
+++ b/Lingang.City.Brain/View/Industry/Building/Left_Second_02.html
@@ -1,5 +1,5 @@
 ﻿<!-- 企业基本信息 -->
-<div id="left02_02" class="divbox divbox-lr clearfix" style="top: 8.5rem;z-index:999;display:block;">
+<div id="left02_02" class="divbox divbox-lr clearfix industry-build-ls2" style="top: 8.5rem;z-index:999;display:block;">
     <h3><div>企业基本信息</div></h3>
     <div class="divcont">
         <ul class="qyjbxx-list" id="Industry_CompanyInfo">
