--- a/Lingang.City.Brain/View/Industry/Estate/Center_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Center_01.html
@@ -2,7 +2,7 @@
 
 
 
-<div class="statistic-box twocol" style="z-index:999;display:block;">
+<div class="statistic-box twocol society-center1" style="z-index:999;display:block;">
     <button class="statistic-slidebtn"><img src="Content/images/statistic-arrow.png"></button>
     <div class="statistic-slidediv">
         <div class="pjc-statistic  short-statistic" style="z-index:999;display:block;">
