--- a/Lingang.City.Brain/View/Industry/Estate/Left_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Left_First_01.html
@@ -1,5 +1,5 @@
 ﻿<!-- 产业竞争力 -->
-<div id="left01_01" class="divbox divbox-ll clearfix" style="z-index:999;display:block;">
+<div id="left01_01" class="divbox divbox-ll clearfix  industry-estate-lf1" style="z-index:999;display:block;">
     <h3><div>产业竞争力</div></h3>
     <div class="divcont">
         <div class="chartdiv cyjzl-chartdiv" style="height: 6rem;">
