--- a/Lingang.City.Brain/View/Industry/Estate/Left_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Left_First_02.html
@@ -1,5 +1,5 @@
 ﻿<!-- 战略新兴产业 -->
-<div id="left01_02" class="divbox divbox-ll clearfix" style="top:10rem;z-index:999;display:block;">
+<div id="left01_02" class="divbox divbox-ll clearfix  industry-estate-lf2" style="top:10rem;z-index:999;display:block;">
     <h3>
         <div>战略新兴产业</div>
     </h3>
