--- a/Lingang.City.Brain/View/Industry/Estate/Left_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Left_Second_01.html
@@ -1,5 +1,5 @@
 ﻿<!-- 企业变化趋势 -->
-<div id="left02_01" class="divbox divbox-lr clearfix" style="z-index:999;display:block;">
+<div id="left02_01" class="divbox divbox-lr clearfix  industry-estate-ls1" style="z-index:999;display:block;">
     <h3>
         <div>企业变化趋势</div>
     </h3>
