--- a/Lingang.City.Brain/View/Industry/Estate/Left_Second_02.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Left_Second_02.html
@@ -1,5 +1,5 @@
 ﻿<!-- 税收变化趋势 -->
-<div id="left02_02" class="divbox divbox-lr clearfix" style="top:9rem;z-index:999;display:block;">
+<div id="left02_02" class="divbox divbox-lr clearfix  industry-estate-ls2" style="top:9rem;z-index:999;display:block;">
     <h3>
         <div>税收变化趋势</div>
     </h3>
