--- a/Lingang.City.Brain/View/Industry/Estate/Left_Second_03.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Left_Second_03.html
@@ -1,5 +1,5 @@
 ﻿<!-- 固投变化趋势 -->
-<div  id="left02_03" class="divbox divbox-lr clearfix" style="top:15rem;z-index:999;display:block;">
+<div  id="left02_03" class="divbox divbox-lr clearfix  industry-estate-ls3" style="top:15rem;z-index:999;display:block;">
     <h3>
         <div>固投变化趋势</div>
     </h3>
