--- a/Lingang.City.Brain/View/Industry/Estate/Right_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_First_02.html
@@ -1,5 +1,5 @@
 ﻿<!-- 薪资水平变化趋势 -->
-<div id="right01_02" class="divbox divbox-rl clearfix" style="top:9rem;z-index:999;display:block;">
+<div id="right01_02" class="divbox divbox-rl clearfix  industry-estate-rf2" style="top:9rem;z-index:999;display:block;">
     <h3 class="hastabbox">
         <div>薪资水平变化趋势</div>
         <div class="charttabbox flex">
