--- a/Lingang.City.Brain/View/Industry/Estate/Right_First_03.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_First_03.html
@@ -1,5 +1,5 @@
 ﻿<!-- 高层次人才变化趋势 -->
-<div id="right01_03" class="divbox divbox-rl clearfix gccrc" style="top:15rem;z-index:999;display:block;">
+<div id="right01_03" class="divbox divbox-rl clearfix gccrc   industry-estate-rf3" style="top:15rem;z-index:999;display:block;">
     <h3 class="hastabbox">
         <div>高层次人才变化趋势</div>
         <div class="charttabbox flex">
