--- a/Lingang.City.Brain/View/Industry/Estate/Right_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_Second_01.html
@@ -1,5 +1,5 @@
 ﻿<!-- 战略新型产业结构 -->
-<div   id="right02_01" class="divbox divbox-rr clearfix" style="z-index:999;display:block;">
+<div   id="right02_01" class="divbox divbox-rr clearfix  industry-estate-rs1" style="z-index:999;display:block;">
     <h3>
         <div>战略新兴产业结构</div>
     </h3>
