--- a/Lingang.City.Brain/View/Industry/Estate/Right_Second_02.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_Second_02.html
@@ -1,5 +1,5 @@
 ﻿<!-- 风控雷达 -->
-<div id="right02_02"  class="divbox divbox-rr clearfix" style="top:9rem;z-index:990;display:block;">
+<div id="right02_02"  class="divbox divbox-rr clearfix  industry-estate-rs2" style="top:9rem;z-index:990;display:block;">
     <h3>
         <div>风控雷达</div>
     </h3>
