--- a/Lingang.City.Brain/View/Industry/Garden/CompanyStatistic.html
+++ b/Lingang.City.Brain/View/Industry/Garden/CompanyStatistic.html
@@ -1,6 +1,6 @@
 ﻿<!-- 左侧 一列 -->
 <!-- 入驻企业统计 -->
-<div class="divbox divbox-ll clearfix cy-ly-rr1 cy-ly-ll1 " id="left01_01" style="z-index: 999;">
+<div class="divbox divbox-ll clearfix cy-ly-rr1 cy-ly-ll1 industry-garden-lf1" id="left01_01" style="z-index: 999;">
     <h3><div>入驻企业统计</div></h3>
     <div class="divcont">
         <div class="flex sjxx-tab">
