--- a/Lingang.City.Brain/View/Industry/Garden/Left_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_First_01.html
@@ -1,5 +1,5 @@
 ﻿<!-- 招商雷达 -->
-<div id="left01_01" class="divbox divbox-ll clearfix" style="z-index:999;display:block;">
+<div id="left01_01" class="divbox divbox-ll clearfix  industry-garden-lf1" style="z-index:999;display:block;">
     <h3>
         <div id="zsld-title">招商雷达</div>
     </h3>
