--- a/Lingang.City.Brain/View/Industry/Garden/Left_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_Second_01.html
@@ -1,5 +1,5 @@
 ﻿<!-- 招商漏斗 -->
-<div id="left02_01"  class="divbox divbox-lr cy-qy-lr1 clearfix" style="z-index:999;display:block;">
+<div id="left02_01"  class="divbox divbox-lr cy-qy-lr1 clearfix industry-garden-ls1" style="z-index:999;display:block;">
     <h3><div>招商漏斗</div></h3>
     <div class="divcont flex cy-qy-lr1-cont">
         <div class="cy-qy-lr1-contdiv" id="zsfunnel">
