--- a/Lingang.City.Brain/View/Industry/Garden/Left_Second_03.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_Second_03.html
@@ -1,5 +1,5 @@
 ﻿<!-- 无人驾驶接驳车 -->
-<div id="left02_03" class="divbox divbox-lr clearfix cy-wrjsjbc" style="top: 14.5rem;z-index:999;display:block;">
+<div id="left02_03" class="divbox divbox-lr clearfix cy-wrjsjbc industry-garden-ls3" style="top: 14.5rem;z-index:999;display:block;">
     <h3><div id="wrjsjbc-title">无人驾驶接驳车</div></h3>
     <div class="divcont">
         <div class="cy-tcfw-div flex">
