--- a/Lingang.City.Brain/View/Industry/Garden/Right_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_Second_01.html
@@ -1,5 +1,5 @@
 ﻿<!-- 事件统计 -->
-<div id="right02_01" class="divbox divbox-rr clearfix cy-ly-rr1" style="z-index:999;display:block;">
+<div id="right02_01" class="divbox divbox-rr clearfix cy-ly-rr1 industry-garden-rs1" style="z-index:999;display:block;">
     <h3><div id="sjtj-title">事件统计</div></h3>
     <div class="divcont">
         <div class="flex sjxx-tab">
