--- a/Lingang.City.Brain/View/SocietyNew/Left_First_01.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_01.html
@@ -1,4 +1,4 @@
-﻿<div id="left01_01" class="divbox divbox-ll clearfix" style="z-index:999;display:block;">
+﻿<div id="left01_01" class="divbox divbox-ll clearfix society-lf1" style="z-index:999;display:block;">
     <h3><div>传感器</div></h3>
     <div class="divcont">
         <ul class="cgq-ul">
