--- a/Lingang.City.Brain/View/SocietyNew/Left_First_04.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_04.html
@@ -1,5 +1,5 @@
 ﻿<!-- 主责部门 -->
-<div id="left01_04" class="divbox divbox-ll clearfix" style="top:16.5rem; margin-bottom: 0;z-index:990;display:block;">
+<div id="left01_04" class="divbox divbox-ll clearfix society-lf4" style="top:16.5rem; margin-bottom: 0;z-index:990;display:block;">
     <h3><div>主责部门</div></h3>
     <div class="divcont scrolldiv"  style="height: 3.7rem; padding-top:0;">
         <table cellpadding="0" cellspacing="0" class="table czdw-table" id="zzbm-table">
