--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone1.html
@@ -1,5 +1,5 @@
 ﻿<!-- 无人机 -->
-<div id="left02_01" class="divbox divbox-lr" style="z-index:999;display:block;">
+<div id="left02_01" class="divbox divbox-lr society-ls-drone1" style="z-index:999;display:block;">
     <h3><div>无人机</div></h3>
     <div class="divcont sqzz-wrj-lr1 flex">
         <ul class="sqrk-ul">
