--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone2.html
@@ -1,5 +1,5 @@
 ﻿<!-- 天气预报 -->
-<div id="left02_02" class="divbox divbox-lr" style="top: 7.5rem;z-index:999;display:block;">
+<div id="left02_02" class="divbox divbox-lr society-ls-drone2" style="top: 7.5rem;z-index:999;display:block;">
     <h3><div>天气预报</div></h3>
     <div class="divcont sqzz-wrj-lr2">
         <div class="sqzz-wrj-lr2-cont" id="drone_weather">
