--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone3.html
@@ -1,5 +1,5 @@
 ﻿<!-- 巡查员信息 -->
-<div id="left02_03" class="divbox divbox-lr" style="top: 13.5rem;z-index:999;display:block;">
+<div id="left02_03" class="divbox divbox-lr society-ls-drone3" style="top: 13.5rem;z-index:999;display:block;">
     <h3><div>巡查员信息</div></h3>
     <div class="divcont sqzz-wrj-lr3">
         <div class="sqzz-wrj-lr3-uldiv scrolldiv" >
