--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid1.html
@@ -1,4 +1,4 @@
-﻿<div id="left02_01" class="divbox divbox-lr sqzz-wg-lr1">
+﻿<div id="left02_01" class="divbox divbox-lr sqzz-wg-lr1 society-ls-grid1">
     <h3><div>处置案件数量</div></h3>
     <div class="divcont sqzz-wgsj-lr1 flex" style="padding-top: 0;">
         <div class="chartdiv czajsl-chartdiv">
