--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid3.html
@@ -1,5 +1,5 @@
 ﻿ <!-- 处置主责部门 -->
-<div id="left02_03" class="divbox divbox-lr sqzz-wg-lr3" style="top:11.6rem;">
+<div id="left02_03" class="divbox divbox-lr sqzz-wg-lr3 society-ls-grid3" style="top:11.6rem;">
     <h3><div>处置主责部门</div></h3>
     <div class="divcont sqzz-wgsj-lr3 flex">
         <div class="czzzbm-l">
