--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
@@ -1,5 +1,5 @@
 ﻿<!-- 社区人口数据 -->
-<div id="left02_01" class="divbox divbox-lr" style="z-index:999;display:block;">
+<div id="left02_01" class="divbox divbox-lr society-ls-iot1" style="z-index:999;display:block;">
     <h3><div>社区人口</div></h3>
     <div class="divcont">
         <ul class="sqrk-ul flex" id="society-person">
