--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT2.html
@@ -1,5 +1,5 @@
 ﻿<!-- 社区车辆数据 -->
-<div id="left02_02" class="divbox divbox-lr clearfix" style="top:6rem;z-index:999;display:block;">
+<div id="left02_02" class="divbox divbox-lr clearfix society-ls-iot2" style="top:6rem;z-index:999;display:block;">
     <h3>
         <div>社区车辆</div>
     </h3>
