--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard1.html
@@ -1,5 +1,5 @@
 ﻿<!-- 无人机 -->
-<div id="left02_01" class="divbox divbox-lr divbox-sqzz-hax-lr1" style="z-index:999;display:block;">
+<div id="left02_01" class="divbox divbox-lr divbox-sqzz-hax-lr1 society-ls-seaboard1" style="z-index:999;display:block;">
     <h3 class="hastabbox">
         <div>无人机</div>
         <div class="charttabbox flex">
