--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet1.html
@@ -1,5 +1,5 @@
 ﻿<!-- 街面基本信息 -->
-<div id="left02_01" class="divbox divbox-lr divbox-sqzz-hax-lr1 sqzz-hax-lr1">
+<div id="left02_01" class="divbox divbox-lr divbox-sqzz-hax-lr1 sqzz-hax-lr1 society-ls-street1">
     <h3><div>街面基本信息</div></h3>
     <div class="divcont">
         <ul class="sqzz-wrjjm-lr1-ul flex">
