--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet3.html
@@ -1,5 +1,5 @@
 ﻿<!-- 巡查员信息 -->
-<div id="left02_03" class="divbox divbox-lr sqzz-wrj-lr3" style="top: 10.5rem;">
+<div id="left02_03" class="divbox divbox-lr sqzz-wrj-lr3 society-ls-street3" style="top: 10.5rem;">
     <h3><div>巡查员信息</div></h3>
     <div class="divcont sqzz-wrj-lr3">
         <div class="sqzz-wrj-lr3-uldiv scrolldiv" style="height: auto; max-height: 9.6rem;">
