--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite1.html
@@ -1,5 +1,5 @@
 ﻿<!-- 工地施工单位 -->
-<div id="left02_01" class="divbox divbox-lr sqzz-wrjgd-lr1">
+<div id="left02_01" class="divbox divbox-lr sqzz-wrjgd-lr1 society-ls-worksite1">
     <h3><div>工地施工单位</div></h3>
     <div class="divcont ">
         <div class="sqzz-wrjgd-lr1-div">
