--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite3.html
@@ -1,5 +1,5 @@
 ﻿<!-- 天气预报 -->
-<div id="left02_03" class="divbox divbox-lr sqzz-wrj-lr2" style="top: 10.8rem;">
+<div id="left02_03" class="divbox divbox-lr sqzz-wrj-lr2 society-ls-worksite3" style="top: 10.8rem;">
     <h3><div>天气预报</div></h3>
     <div class="divcont sqzz-wrj-lr2">
         <div class="sqzz-wrj-lr2-cont" id="worksite-weather">
