--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_01.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_01.html
@@ -1,5 +1,5 @@
 ﻿<!-- 事件信息 -->
-<div  id="right02_01" class="divbox divbox-rr clearfix" style="z-index:999;display:block;">
+<div  id="right02_01" class="divbox divbox-rr clearfix society-rs1" style="z-index:999;display:block;">
     <h3><div>事件信息</div></h3>
     <div class="divcont divcont-sj">
         <ul class="sj-list flex">
