--- a/Lingang.City.Brain/View/TourNew/Left_First_01.html
+++ b/Lingang.City.Brain/View/TourNew/Left_First_01.html
@@ -1,5 +1,5 @@
 ﻿<!-- 游客画像 -->
-<div id="left01_01" class="divbox divbox-ll clearfix" style="z-index:999;display:block;">
+<div id="left01_01" class="divbox divbox-ll clearfix tour-lf1" style="z-index:999;display:block;">
     <h3><div>游客画像</div></h3>
     <div class="divcont">
         <ul class="cgq-ul flex ykhx-ul">
