--- a/Lingang.City.Brain/View/TourNew/Left_First_03.html
+++ b/Lingang.City.Brain/View/TourNew/Left_First_03.html
@@ -1,5 +1,5 @@
 ﻿ <!-- 游客趋势分析 -->
-<div id="left01_03" class="divbox divbox-ll clearfix" style="top:11.5rem;z-index:999;display:block;">
+<div id="left01_03" class="divbox divbox-ll clearfix tour-lf3" style="top:11.5rem;z-index:999;display:block;">
     <h3>
         <div>游客趋势分析</div>
     </h3>
