--- a/Lingang.City.Brain/View/TourNew/Left_First_04.html
+++ b/Lingang.City.Brain/View/TourNew/Left_First_04.html
@@ -1,5 +1,5 @@
 ﻿<!-- 舆情分析 -->
-<div id="left01_04" class="divbox divbox-ll clearfix yqfx" style="top:17.5rem; margin-bottom:0;z-index:990;display:block;">
+<div id="left01_04" class="divbox divbox-ll clearfix yqfx tour-lf4" style="top:17.5rem; margin-bottom:0;z-index:990;display:block;">
     <h3 class="hastabbox">
         <div>舆情分析</div>
         <div class="charttabbox flex">
