--- a/Lingang.City.Brain/View/TourNew/Left_Second_01.html
+++ b/Lingang.City.Brain/View/TourNew/Left_Second_01.html
@@ -1,4 +1,4 @@
-﻿<div id="left02_01" class="divbox divbox-lr " style="z-index:999;display:block;">
+﻿<div id="left02_01" class="divbox divbox-lr tour-ls1" style="z-index:999;display:block;">
     <h3><div id="wrjsx">无人机</div></h3>
     <div class="divcont flex">
         <div class="wrj-left" style="width: 54%">
