--- a/Lingang.City.Brain/View/TourNew/Left_Second_03.html
+++ b/Lingang.City.Brain/View/TourNew/Left_Second_03.html
@@ -1,5 +1,5 @@
 ﻿<!-- 交通信息 -->
-<div id="left02_03" class="divbox divbox-lr clearfix dkl-jtxx" style="top:13.5rem; margin-bottom:0;z-index:999;display:block;">
+<div id="left02_03" class="divbox divbox-lr clearfix dkl-jtxx tour-ls3" style="top:13.5rem; margin-bottom:0;z-index:999;display:block;">
     <h3><div>交通信息</div></h3>
     <div class="divcont">
         <ul class="cgq-ul flex dkl-jtxxul">
