--- a/Lingang.City.Brain/View/TourNew/Right_First_01.html
+++ b/Lingang.City.Brain/View/TourNew/Right_First_01.html
@@ -1,5 +1,5 @@
 ﻿<!-- 人员车辆统计 -->
-<div id="right01_01" class="divbox divbox-rl clearfix rycltj" style="z-index:999;display:block;">
+<div id="right01_01" class="divbox divbox-rl clearfix rycltj tour-rf1" style="z-index:999;display:block;">
     <h3><div id="renche">人员车辆统计</div></h3>
     <div class="divcont">
         <div class="rycltj-tabbox flex">
