--- a/Lingang.City.Brain/View/TourNew/Right_First_03.html
+++ b/Lingang.City.Brain/View/TourNew/Right_First_03.html
@@ -1,5 +1,5 @@
 ﻿<!-- 近5日事件统计 -->
-<div id="right01_03" class="divbox divbox-rl clearfix jwrsjtj" style="top:17.2rem;margin-bottom:0;z-index:999;display:block;">
+<div id="right01_03" class="divbox divbox-rl clearfix jwrsjtj tour-rf3" style="top:17.2rem;margin-bottom:0;z-index:999;display:block;">
     <h3><div id="jwrsjtjsx">近5日事件统计</div></h3>
     <div class="divcont">
         <div class="chartdiv jwrsjtj-chartdiv"><div class="jwrsjtj-chart" id="jwrsjtj-chart"></div></div>
