--- a/Lingang.City.Brain/View/TourNew/Right_Second_01.html
+++ b/Lingang.City.Brain/View/TourNew/Right_Second_01.html
@@ -1,5 +1,5 @@
 ﻿ <!-- 景区预警指标 -->
-<div id="right02_01" class="divbox divbox-rr clearfix" style="z-index:999;display:block;">
+<div id="right02_01" class="divbox divbox-rr clearfix tour-rs1" style="z-index:999;display:block;">
     <!--<h3><div>景区预警指标</div></h3>
     <div class="divcont">
         <div class="yqyj-levelbox clearfix"style="overflow: hidden; border-radius: .3rem;">
