--- a/Lingang.City.Brain/View/TourNew/Right_Second_02.html
+++ b/Lingang.City.Brain/View/TourNew/Right_Second_02.html
@@ -1,5 +1,5 @@
 ﻿<!-- 景区事件统计 -->
-<div id="right02_02" class="divbox divbox-rr clearfix yqsj" style="z-index:999;" >
+<div id="right02_02" class="divbox divbox-rr clearfix yqsj tour-rs2" style="z-index:999;" >
     <h3><div id="jqsjtj">景区事件统计</div></h3>
     <div class="divcont">
         <div class="jtxx-tabbox">
