--- a/Lingang.City.Brain/View/TourNew/Right_Second_03.html
+++ b/Lingang.City.Brain/View/TourNew/Right_Second_03.html
@@ -1,5 +1,5 @@
 ﻿<!-- 景区事件列表 -->
-<div id="right02_03" class="divbox  divbox-rr clearfix yqsjlb" style="top:10.5rem; margin-bottom:0;z-index:999;display:block;">
+<div id="right02_03" class="divbox  divbox-rr clearfix yqsjlb tour-rs3" style="top:10.5rem; margin-bottom:0;z-index:999;display:block;">
     <h3><div>景区事件列表</div></h3>
     <div class="divcont scrolldiv" style="padding-top: .2rem; height:11rem;" >
           <button type="button" class="center-eventlist-btntour" onclick="require('t_Echart').loadCenterEventList(); require('t_Echart').closeBigChart();">
