--- a/Lingang.City.Brain/View/Industry/Garden/Left_Second_02.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_Second_02.html
@@ -1,5 +1,5 @@
 ﻿<!-- 停车服务 -->
-<div id="left02_02" class="divbox divbox-lr clearfix cy-tcfw" style="top: 8rem;z-index:999;display:block;">
+<div id="left02_02" class="divbox divbox-lr clearfix cy-tcfw industry-garden-ls2" style="top: 8rem;z-index:999;display:block;">
     <h3><div id="tcfw-title">停车服务</div></h3>
     <div class="divcont">
         <div class="cy-tcfw-div flex">
