--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
@@ -1,5 +1,5 @@
 ﻿<!-- 摄像头 -->
-<div id="left02_03" class="divbox divbox-lr divbox-sxt2" style="top:12rem;z-index:999;display:block;">
+<div id="left02_03" class="divbox divbox-lr divbox-sxt2 society-ls-iot3" style="top:12rem;z-index:999;display:block;">
     <h3><div>摄像头</div></h3>
     <div class="divcont">
         <ul class="flex sxt-ul">
