--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT4.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT4.html
@@ -1,5 +1,5 @@
 ﻿<!-- 社区IOT数据 -->
-<div id="left02_04" class="divbox divbox-lr" style="top:15rem; margin-bottom: 0;z-index:990;display:block;">
+<div id="left02_04" class="divbox divbox-lr society-ls-iot4" style="top:15rem; margin-bottom: 0;z-index:990;display:block;">
     <h3><div>社区IOT</div></h3>
     <div class="divcont">
         <ul class="iot-ul" id="society-iot">
