--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard3.html
@@ -1,6 +1,6 @@
 ﻿
 <!-- 潮汐时间表 -->
-<div  id="left02_03" class="divbox divbox-lr divbox-sqzz-hax-lr3" style="top: 15.8rem;z-index:999;display:block;">
+<div  id="left02_03" class="divbox divbox-lr divbox-sqzz-hax-lr3 society-ls-seaboard3" style="top: 15.8rem;z-index:999;display:block;">
     <h3><div>潮汐时间表</div></h3>
     <div class="divcont sqzz-hax-lr3">
         <div class="sqzz-hax-lr3-ulbox scrolldiv" style="max-height:4.2rem;">
