--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
@@ -1,5 +1,5 @@
 ﻿<!-- 事件处理成功数据 -->
-<div id="right02_02" class="divbox divbox-rr clearfix" style="top:7.5rem;  margin-bottom: 0;z-index:999;display:block;">
+<div id="right02_02" class="divbox divbox-rr clearfix society-rs2" style="top:7.5rem;  margin-bottom: 0;z-index:999;display:block;">
     <!--  头部有图标tab时， 添加hastabbox-->
     <h3 class="hastabbox">
         <div>事件处理成功数</div>
