--- a/Lingang.City.Brain/View/TourNew/Left_Second_02.html
+++ b/Lingang.City.Brain/View/TourNew/Left_Second_02.html
@@ -1,5 +1,5 @@
 ﻿<!-- 摄像头 -->
-<div id="left02_02" class="divbox divbox-lr" style="top:7.5rem;z-index:999;display:block;">
+<div id="left02_02" class="divbox divbox-lr tour-ls2" style="top:7.5rem;z-index:999;display:block;">
     <h3><div id="zxsxtsx">在线摄像头</div></h3>
     <div class="divcont wrj-l2  dkl-sxt">
         <ul class="flex"id="zxsxt" style=" padding .2rem 0;">
