--- a/Lingang.City.Brain/View/TourNew/ParkingLotDetail.html
+++ b/Lingang.City.Brain/View/TourNew/ParkingLotDetail.html
@@ -2,8 +2,8 @@
     <div class="poi-title">港城新天地</div>
     <div class="poi-cont">
         <ul class="poi-ul">
-            <li class="poi-li"><span>总车位数：</span><em><i>857</i>位</em></li>
-            <li class="poi-li"><span>空余车位：</span><em><i>350</i>位</em></li>
+            <li class="poi-li"><span>总车位数：</span><em><i>857</i></em>位</li>
+            <li class="poi-li"><span>空余车位：</span><em><i>350</i></em>位</li>
         </ul>
     </div>
 </div>
