--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -4,8 +4,8 @@
 html{ font-size: 90px; }
 body{
 	position: relative;
-	width: 11520px;
-	height: 3240px;
+	/*width: 11520px;
+	height: 3240px;*/
     /*width: 7680px;
 	height: 2160px;*/
     /*width: 4500px;
