--- a/Lingang.City.Brain/View/Industry/Building/BuildingDetail.html
+++ b/Lingang.City.Brain/View/Industry/Building/BuildingDetail.html
@@ -8,7 +8,7 @@
             <li class="loudong-li"><div>面积：</div><span><em class="testAerial" id="buildingArea_detail">1200</em>㎡</span></li>
             <li class="loudong-li">
                 <div>楼层：</div>
-                    <span class="loudong-select" id="buildingFloors_detail"></span>
+                    <span class="loudong-select testAerial" id="buildingFloors_detail" style="font-size:.6rem;"></span>
                 <!--<select class="loudong-select" id="buildingFloors_detail">
                     <option>1</option>
                     <option>2</option>
