--- a/Lingang.City.Brain/View/Industry/Garden/Center_EventDetail.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Center_EventDetail.html
@@ -7,7 +7,7 @@
         <div class="box-leftpic" style="text-align:center;">
             <img src="Content/images/20190320-1b77e4e7-0a580a000f62-00000008-000090d4.jpg" />
         </div>
-        <dic class="box-rightinfo">
+        <div class="box-rightinfo">
             <ul>
                 <li><span>事件时间：</span><em>2019-03-20 23:10:48</em></li>
                 <li><span>事件地点：</span><em>临港大道两港大道以东200米</em></li>
@@ -15,7 +15,7 @@
                 <li><span>事件描述：</span><em>临港大道两港大道以东200米周边疑似黑车,车牌号:沪CV6716</em></li>
                 <li><span>事件状态：</span><em>待处置</em></li>
             </ul>
-        </dic>
+        </div>
     </div>
 </div>
 
