--- a/Lingang.City.Brain/View/SocietyNew/Bottom_EventPaidan.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_EventPaidan.html
@@ -3,14 +3,14 @@
         <button type="button" class="box-close" onclick="require('s_Home').closeEventPaidan();"></button>
     </div>
     <div class="boxcont" id="ul_paidan">
-        <dic class="sqzz-sjjd-div flex">
+        <div class="sqzz-sjjd-div flex">
             <img src="Content/images/yangyufeng.jpg" style="width: 112px; height: 150px;">
             <ul class="sqzz-sjjd-list1">
                 <li><span>接单员：</span><em>杨育峰</em></li>
                 <li><span>性别：</span><em>男</em></li>
                 <li><span>职位：</span><em>组长</em></li>
             </ul>
-        </dic>
+        </div>
         <ul class="sqzz-sjjd-list2">
             <li><span>响应时间：</span><em>2019-03-20 10:30:30</em></li>
             <li><span>状态：</span><em>赶赴现场</em></li>
