--- a/Lingang.City.Brain/View/SocietyNew/Bottom_IOTDetail.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_IOTDetail.html
@@ -4,7 +4,7 @@
         <button type="button" class="box-close" onclick="require('s_Home').closeIOTDetail();"></button>
     </div>
     <div class="boxcont clearfix" id="iotdetail">
-        <dic class="box-rightinfo fl" style="margin-top:.2rem; font-size:.35rem; line-height:.7rem;">
+        <div class="box-rightinfo fl" style="margin-top:.2rem; font-size:.35rem; line-height:.7rem;">
             <ul>
                 <li><span>事件时间：</span><em>2019-03-20 23:10:48</em></li>
                 <li><span>事件地点：</span><em>临港大道两港大道以东200米</em></li>
@@ -12,7 +12,7 @@
                 <li><span>事件描述：</span><em>临港大道两港大道以东200米周边疑似黑车,车牌号:沪CV6716</em></li>
                 <li><span>事件状态：</span><em>待处置</em></li>
             </ul>
-        </dic>
+        </div>
     </div>
 </div>
 
