--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -5,10 +5,10 @@ html{ font-size: 90px; }
 body{
 	position: relative;
 	/*width: 11520px;
-	height: 3240px;*/
-    /*width: 7680px;
-	height: 2160px;*/
-    /*width: 4500px;
+	height: 3240px;
+    width: 7680px;
+	height: 2160px;
+    width: 4500px;
 	height: 3000px;*/
 	color:#fff;
 	font-family:"微软雅黑";
