--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -3621,7 +3621,7 @@ dd.pjc-statistic-star >form{
 .poi-box{
 	z-index: 9999;
 	position: absolute;
-	top:-1rem;
+	top:0;
 	left: 1rem;
 	/*min-width: 4.3em;*/
 	padding: .33em 0 .18em;
