社总--社区IOT正常异常更新

--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
@@ -2,7 +2,7 @@
 <div id="right02_02" class="divbox divbox-rr clearfix society-rs2" style="top:7.5rem;  margin-bottom: 0;z-index:999;display:block;">
     <!--  头部有图标tab时， 添加hastabbox-->
     <h3 class="hastabbox">
-        <div>事件处理成功数</div>
+        <div  id="sjcg-title">事件处理成功数</div>
         <div class="charttabbox flex" id="sjcg-charttab">
             <a class="charttab active">事件成功数</a>
             <a class="charttab">事件成功率(%)</a>
