--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT4.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT4.html
@@ -3,15 +3,15 @@
     <h3><div>社区IOT</div></h3>
     <div class="divcont">
         <ul class="iot-ul" id="society-iot">
-            <li class="iot-li">
+            <li class="iot-li" id="society-iot-li01">
                 <div class="item-l"><div class="item-l-name">烟感感应</div><div class="item-l-data testAerial">480</div></div>
-                <div class="item-r">正常：<span class="testAerial">479</span>异常：<span class="testAerial">1</span></div>
+                <div class="item-r">正常：<span class="testAerial">479</span>异常：<span class="testAerial">0</span></div>
             </li>
-            <li class="iot-li">
+            <li class="iot-li" id="society-iot-li02">
                 <div class="item-l"><div class="item-l-name">智能井盖</div><div class="item-l-data testAerial">102</div></div>
                 <div class="item-r">正常：<span class="testAerial">102</span>异常：<span class="testAerial">0</span></div>
             </li>
-            <li class="iot-li">
+            <li class="iot-li" id="society-iot-li03">
                 <div class="item-l"><div class="item-l-name">无线门磁</div><div class="item-l-data testAerial">102</div></div>
                 <div class="item-r">正常：<span class="testAerial">102</span>异常：<span class="testAerial">0</span></div>
             </li>
