--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -3626,7 +3626,7 @@ dd.pjc-statistic-star >form{
 	/*min-width: 4.3em;*/
 	padding: .33em 0 .18em;
 	/*font-size: 170px;*/
-	font-size: 2em;
+	font-size: 1em;
 	background: 
 		url(../Content/images/poi-top.png) no-repeat,
 		url(../Content/images/poi-bottom.png) 0 100% no-repeat;
@@ -3638,7 +3638,7 @@ dd.pjc-statistic-star >form{
 	top: -.6em;
 	left: 0;
 	width: 100%;
-	font-size: .26em;
+	font-size: .22em;
 	text-align: center;
 }
 .poi-cont{
@@ -3819,12 +3819,12 @@ dd.pjc-statistic-star >form{
 
 
 @media screen and (max-width: 11520px){
-	html{ font-size:130px;}
+	html{ font-size:160px;}
 }
 @media screen and (max-width: 7680px) {
     html { font-size: 90px; }
 }
-@media screen and (max-height: 3010px) {
+@media screen and (max-width: 4500px) {
     html { font-size: 70px; }
     /*社区综合*/
     .society-lf1 { top:13rem !important;}
