--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -10,6 +10,9 @@ body{
 	height: 2160px;
     width: 4500px;
 	height: 3000px;*/
+
+    width: 7680px;
+	height: 2160px;
 	color:#fff;
 	font-family:"微软雅黑";
 	/*overflow: hidden;*/
@@ -3763,6 +3766,7 @@ dd.pjc-statistic-star >form{
 	color: #ccd4e9;
 	padding: .2em;
 	margin-top: .5em;
+	overflow:hidden;
 }
 .center-event-li:first-child{ margin-top: 0; }
 .center-event-li-line1{ 
