--- a/Lingang.City.Brain/Views/Shared/_Layout.cshtml
+++ b/Lingang.City.Brain/Views/Shared/_Layout.cshtml
@@ -1,21 +1,24 @@
 ﻿<!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    @*<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />*@
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+
     <meta http-equiv="X-UA-Compatible" content="IE=10" />
-    <meta charset="utf-8" />
-    <title>临港智慧城市大脑平台</title>    
+        @*<meta charset="utf-8" />*@
+    <title>临港智慧城市大脑平台</title>
     <script src="~/Scripts/jquery-1.10.2.js"></script>
     <script src="~/Scripts/Qmap/pep.min.js"></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/jquery")    
-    @Scripts.Render("~/bundles/signalR")    
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/signalR")
     <link href="~/Scripts/Tools/aliplayer/aliplayer-min.css" rel="stylesheet" />
     <script src="~/Scripts/Tools/vex/js/vex.combined.min.js"></script>
 </head>
 <body style="padding-top:0px;overflow-y:hidden;overflow-x:hidden;" oncontextmenu="return false" ondragstart="return false">
     @*<div style="height:100%">*@
-        @RenderBody()
+    @RenderBody()
     @*</div>*@
 </body>
 </html>
