--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -11,8 +11,8 @@ body{
     width: 4500px;
 	height: 3000px;*/
 
-    width: 7680px;
-	height: 2160px;
+    /*width: 7680px;
+	height: 2160px;*/
 	color:#fff;
 	font-family:"微软雅黑";
 	/*overflow: hidden;*/
